--- a/Server/Services/Web3Laliberte.OperationsAPI/appsettings.json
+++ b/Server/Services/Web3Laliberte.OperationsAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=${DB_HOST};Database=${DB_DATABASE};User=${DB_USER};Password=${DB_PASSWORD};"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
